[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/levels/track/Track.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/miscs/camera/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/vehicule_info/VehicleInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/main_game/MainGame.gd" type="Script" id=4]
[ext_resource path="res://music/music01.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/menus/options/Options.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/controls_helper/ControlsHelper.tscn" type="PackedScene" id=7]

[node name="MainGame" type="Node"]
script = ExtResource( 4 )

[node name="World" type="Spatial" parent="."]

[node name="Track" parent="World" instance=ExtResource( 1 )]

[node name="Camera" parent="World" instance=ExtResource( 2 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="VehicleInfo" parent="UI" instance=ExtResource( 3 )]

[node name="OptionsMenu" type="MarginContainer" parent="UI"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.5
margin_top = -237.0
margin_right = 399.5
margin_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="UI/OptionsMenu" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 799.0
margin_bottom = 474.0
enable_close = true
enable_return_main_menu = true

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -209.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsHelper" parent="UI/MarginContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 230.0
margin_bottom = 189.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
bus = "Music"
[connection signal="closed" from="UI/OptionsMenu/Options" to="." method="_on_Options_closed"]
